my work project

--- a/my work.html
+++ b/my work.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my first repo work</title>
+    <title>hajiganj tsc</title>
+    <link rel="stylesheet" href="css file/htsc.css">
 </head>
 <body>
+    <div>
+        <h2>first project</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus facere id accusamus impedit doloremque, blanditiis nisi earum odit. Corporis asperiores voluptate esse aspernatur! Quam, iusto repellat reprehenderit perferendis vel voluptate.</p>
+    </div>
+    <div>
+        <h2>second project</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus facere id accusamus impedit doloremque, blanditiis nisi earum odit. Corporis asperiores voluptate esse aspernatur! Quam, iusto repellat reprehenderit perferendis vel voluptate.</p>
+    </div>
+    <div>
+        <h2>third project</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus facere id accusamus impedit doloremque, blanditiis nisi earum odit. Corporis asperiores voluptate esse aspernatur! Quam, iusto repellat reprehenderit perferendis vel voluptate.</p>
+    </div>
+
     
 </body>
 </html>
